# TRustyBox

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: encryption.rs  main.rs
backend/src/crypt/: aes_key.rs  base64_convert.rs  decryption.rs  encryption.rs  mod.rs
backend/src/db/: dublicates.rs  find_dublicate.rs  get_path.rs  insert_info.rs  insert_to_db.rs  insert_to_mongo.rs  mod.rs
backend/src/file_actions/: download_file.rs  mod.rs  resp_errors.rs  upload_file.rs
backend/src/file_actions/types/: file_type.rs  mod.rs  upload_types.rs
backend/src/tools/: content_type.rs  generate_short_path_url.rs  generate_uuid.rs  mod.rs  short_url.rs
backend/src/tools/http_tools/: cors.rs  get_favicon.rs  mod.rs
backend/tests/: convert.rs  short_url.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.js  FileUploadForm.js  upload-form.js  upload-form.js.map  upload-form.ts
src/: connection_to_db.rs  encryption.rs  main.rs  mod.rs  tools.rs
