[package]
name = "rustic_share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
futures = "0.3.25"
futures-util = "0.3.27"
uuid = { version = "1.3.0", features = ["v4"] }
mongodb = "2.4.0"
rand = "0.8.5"
async-recursion = "1.0.4"
dotenv = "0.15.0"
tower-http = { version = "0.4.0", features = ["limit"] }
axum_typed_multipart = "0.3.2"
rand_core = "0.6.4"
axum-macros = "0.3.7"
