[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "trustybox_tests"
path = "src/main.rs"

[[bin]]
name = "trustybox"
path = "src/main.rs"

[dependencies]
axum = { version = "0.6.12", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.29", features = ["fs"] }
futures = "0.3.25"
uuid = { version = "1.3.0", features = ["v4"] }
mongodb = "2.4.0"
rand = "0.8.5"
async-recursion = "1.0.4"
dotenv = "0.15.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
aes = "0.8.2"
aes-gcm = "0.10.1"
base64 = "0.21.0"
axum-extra = "0.7.3"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
